volexc/tests/ui/mapkey_map.typescript.out
Error: invalid map key type: maps cannot be used as map keys
   ╭─[mapkey_map.vol:6:12]
   │
 6 │     data: {{u32:string}:string}
   │            ──────┬─────  
   │                  ╰─────── map type used here
───╯