volexc/tests/ui/mapkey_map.vol
// rust:fail
// go:fail
// typescript:fail
// Maps cannot be used as map keys in any language
struct Test {
    data: {{u32:string}:string}
}
